# pigweed-quickstart

./: .bazelrc  README.md  WORKSPACE  echo.bzl  pigweed.json
src/: BUILD.bazel  (+1 more)
targets/: BUILD.bazel
targets/same70/Microchip.SAME70_DFP.4.11.257/: ABOUT.md  BUILD.bazel  Microchip.SAME70_DFP.pdsc  Microchip.SAME70_DFP.sha1  package.content
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/armcc/: system_same70j19b.c  system_same70j21b.c  system_same70n20b.c  system_same70q21b.c
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/armcc/armcc/: startup_same70j19b.s  startup_same70j20b.s  startup_same70j21b.s  startup_same70n19b.s  startup_same70n20b.s  startup_same70n21b.s  startup_same70q19b.s  startup_same70q20b.s  startup_same70q21b.s
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/atdf/: ATSAME70J19B.atdf  ATSAME70J20B.atdf  ATSAME70J21B.atdf  ATSAME70N19B.atdf  ATSAME70N20B.atdf  ATSAME70N21B.atdf  ATSAME70Q19B.atdf  ATSAME70Q20B.atdf  ATSAME70Q21B.atdf
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/edc/: ATSAME70J19B.PIC  ATSAME70J20B.PIC  ATSAME70J21B.PIC  ATSAME70N19B.PIC  ATSAME70N20B.PIC  ATSAME70N21B.PIC  ATSAME70Q19B.PIC  ATSAME70Q20B.PIC
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/gcc/: system_same70j20b.c  system_same70q20b.c
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/gcc/gcc/: same70j19b_flash.ld  same70j19b_sram.ld  same70j20b_flash.ld  same70j20b_sram.ld  same70j21b_flash.ld  same70j21b_sram.ld  same70n19b_flash.ld  same70n19b_sram.ld  same70n20b_flash.ld  same70n20b_sram.ld  same70n21b_flash.ld  same70n21b_sram.ld  same70q19b_flash.ld  same70q19b_sram.ld  same70q20b_flash.ld  same70q20b_sram.ld  same70q21b_flash.ld  same70q21b_sram.ld  startup_same70j19b.c  startup_same70j20b.c  startup_same70j21b.c  startup_same70n19b.c  startup_same70n20b.c  startup_same70n21b.c  startup_same70q19b.c  startup_same70q20b.c  startup_same70q21b.c
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/iar/: system_same70n19b.c  system_same70n21b.c  system_same70q19b.c
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/include/: component-version.h  sam.h  same70j19b.h  same70j20b.h  same70j21b.h  same70n19b.h  same70n20b.h  same70n21b.h  same70q19b.h  same70q20b.h  system_same70.h
targets/same70/Microchip.SAME70_DFP.4.11.257/same70b/svd/: ATSAME70J19B.svd  ATSAME70J20B.svd  ATSAME70J21B.svd  ATSAME70N19B.svd  ATSAME70N20B.svd  ATSAME70N21B.svd  ATSAME70Q19B.svd  ATSAME70Q20B.svd  ATSAME70Q21B.svd
targets/same70/Microchip.SAME70_DFP.4.11.257/scripts/: j-link_cortex-m7.py
targets/same70/atsame70q20b/: BUILD.bazel  openocd_atsame70q20b.cfg
(+64 files in other folders)
